Resolved form send

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "django-react-csrftoken": "^1.0.4",
+    "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
