--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scroll": "^1.7.14",
     "redux": "^4.0.4",
     "style-loader": "^1.0.0"
   }
