--- a/package.json
+++ b/package.json
@@ -35,12 +35,15 @@
     "@fortawesome/free-brands-svg-icons": "^5.11.2",
     "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "@fortawesome/react-fontawesome": "^0.1.7",
+    "axios": "^0.19.0",
     "django-react-csrftoken": "^1.0.4",
     "js-cookie": "^2.2.1",
     "prop-types": "^15.7.2",
+    "pure-react-carousel": "^1.23.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
+    "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scroll": "^1.7.14",
