--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "axios": "^0.19.0",
     "django-react-csrftoken": "^1.0.4",
     "js-cookie": "^2.2.1",
+    "leaflet": "^1.5.1",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.23.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-leaflet": "^2.5.0",
     "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.51",
     "react-router-dom": "^5.1.2",
