--- a/package.json
+++ b/package.json
@@ -46,9 +46,11 @@
     "react-leaflet": "^2.5.0",
     "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.51",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
     "react-scroll": "^1.7.14",
+    "react-spinners": "^0.6.1",
     "redux": "^4.0.4",
     "style-loader": "^1.0.0"
   }
