--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "pure-react-carousel": "^1.23.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-infinite-scroll-component": "^5.0.4",
+    "react-lazyload": "^2.6.5",
     "react-leaflet": "^2.5.0",
     "react-redux": "^7.1.1",
     "react-responsive-carousel": "^3.1.51",
