--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "axios": "^0.19.0",
     "django-react-csrftoken": "^1.0.4",
     "js-cookie": "^2.2.1",
+    "lax.js": "^1.2.5",
     "leaflet": "^1.5.1",
     "prop-types": "^15.7.2",
     "pure-react-carousel": "^1.23.2",
