--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --mode development --watch ./DCImobiliare/frontend/src/index.js --output ./DCImobiliare/frontend/static/frontend/main.js",
-    "build": "webpack --mode production ./DCImobiliare/frontend/src/index.js --output ./DCImobiliare/frontend/static/frontend/main.js"
+    "build": "webpack --mode production ./DCImobiliare/frontend/src/index.js --output ./DCImobiliare/frontend/static/frontend/main.js",
+    "start": "webpack --mode production ./DCImobiliare/frontend/src/index.js"
   },
   "repository": {
     "type": "git",
